finished MVP and stretch goal (added fixed nav bar)

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,6 +64,9 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+body {
+	margin: 10px 30px;
+}
 
 header {
 	display: inline-block;
@@ -72,35 +75,106 @@ header {
 
 nav {
 	display: inline-block;
+	margin: 20px;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	background-color: lightskyblue;
 }
 
 nav a {
 	padding: 10px;
 	margin: 15px;
-	color: Grey;
+	color: black;
 	text-decoration: none;
 }
 
+.logo {
+	padding: 0px 20px;
+}
+
+.top-section {
+	width: 100%;
+	margin: 20px;
+	padding-top: 50px;
+}
+
+.top-section-text {
+	display: inline-block;
+	height: 300px;
+	width: 400px;
+}
 
 h1 {
 	font-size: 80px;
 	text-align: center;
 	display: inline-block;
-	margin: 30px;
-	padding: 30px;
+	vertical-align: center;
+	padding: 10px;
 }
 
 .round-image {
 	display: inline-block;
 	padding: 25px 30px;
-	float: right;
-	margin: 25px 25px 25px 50px;
+	margin: 50px 25px 25px 100px;
+	width: 300px;
+	height: 300px;
 }
 
 .btn {
 	border: 1px solid black;
 	text-align: center;
 	display: inline-block;
-	margin: 20px 50px;
 	padding: 5px 20px;
+	margin: 10px 100px;
+}
+
+.page-divider {
+	border-bottom: 1px solid black;
+	border-top: 1px solid black;
+	width: 100%;
+	display: block;
+	margin: 0 auto;
+	padding: 30px;
+	text-align: left;
+}
+
+.features, .about {
+	display: inline-block;
+	width: 45%;
+	margin-top: 10px;
+	padding: 20px;
+}
+
+.about {
+	margin-left: 60px;
+}
+
+.middle-img {
+	width: 100%;
+	height: auto;
+	padding: 10px;
+	margin: 10px;
+}
+
+.services, .product, .vision {
+	display: inline-block;
+	width: 30%;
+	margin: 10px;
+}
+
+.contact {
+	display: block;
+	margin: 30px;
+	padding: 20px;
+}
+
+footer {
+	width: 100%;
+	display: block;
+}
+
+footer p {
+	margin: 0 auto;
+	width: 200px;
 }
